--- a/projects/web/src/app/admin/audit-logs/list/list.component.html
+++ b/projects/web/src/app/admin/audit-logs/list/list.component.html
@@ -28,12 +28,12 @@
                   </button>
                 </ng-template>
               </nz-input-group>
-              <nz-button-group *nzSpaceItem>
+              <nz-space-compact *nzSpaceItem>
                 <button type="button" nz-button nzType="default"
                   (click)="loadData({})">
                   <svg-icon class="me-1" iconPath="bi/arrow-repeat" /> 刷新
                 </button>
-              </nz-button-group>
+              </nz-space-compact>
             </nz-space>
           </form>
         </ng-template>
