--- a/projects/web/src/app/admin/users/password/password.component.html
+++ b/projects/web/src/app/admin/users/password/password.component.html
@@ -1,7 +1,7 @@
 @let user = account.current();
 <nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl">
   <ng-template #toolsTpl>
-    <nz-button-group>
+    <nz-space-compact>
       @if (user.privileges['app_users.reset_pass']) {
         <button type="button" type="button" nz-button nzType="primary"
           [disabled]="!form.valid" (click)="save()">
@@ -11,7 +11,7 @@
       <button type="button" nz-button nzType="default" (click)="cancel()">
         <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
-    </nz-button-group>
+    </nz-space-compact>
   </ng-template>
   <form nz-form [formGroup]="form" nzLayout="vertical" (ngSubmit)="save()">
     <nz-form-item>
