--- a/projects/web/src/app/account/token-detail/token-detail.component.html
+++ b/projects/web/src/app/account/token-detail/token-detail.component.html
@@ -2,7 +2,7 @@
   [nzTitle]="title" [nzExtra]="toolsTpl"
   [nzActions]="editable ? [okTpl, cancelTpl] : []">
   <ng-template #toolsTpl>
-    <nz-button-group>
+    <nz-space-compact>
       <button type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
         <svg-icon class="me-1" iconPath="bi/check" /> 保存
@@ -10,7 +10,7 @@
       <button type="button" nz-button nzType="default" (click)="cancel()">
         <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
-    </nz-button-group>
+    </nz-space-compact>
   </ng-template>
   <form nz-form nzLayout="vertical" #detailForm="ngForm">
     <nz-form-item>
