--- a/projects/web/src/app/admin/organize-units/detail/detail.component.html
+++ b/projects/web/src/app/admin/organize-units/detail/detail.component.html
@@ -2,7 +2,7 @@
 <nz-card class="ant-card-data-detail m-0"
   [nzTitle]="title" [nzExtra]="toolsTpl" [nzActions]="editable ? [okTpl, cancelTpl] : []">
   <ng-template #toolsTpl>
-    <nz-button-group>
+    <nz-space-compact>
       @if (user.privileges['app_organize_units.update'] && editable) {
         <button type="button" nz-button nzType="primary"
           (click)="save()" [disabled]="!detailForm.valid">
@@ -12,7 +12,7 @@
       <button type="button" nz-button nzType="default" (click)="cancel()">
         <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
-    </nz-button-group>
+    </nz-space-compact>
   </ng-template>
   <form nz-form nzLayout="vertical" #detailForm="ngForm">
     @if (vm.treeNodes | async; as treeNodes) {
