--- a/projects/web/src/app/admin/users/roles/roles.component.html
+++ b/projects/web/src/app/admin/users/roles/roles.component.html
@@ -1,13 +1,13 @@
 <nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl">
   <ng-template #toolsTpl>
-    <nz-button-group>
+    <nz-space-compact>
       <button type="button" nz-button nzType="primary" (click)="save()">
         <svg-icon class="me-1" iconPath="bi/check" /> 确定
       </button>
       <button type="button" nz-button nzType="default"(click)="cancel()">
         <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
-    </nz-button-group>
+    </nz-space-compact>
   </ng-template>
   <form nz-form>
     <nz-form-item>
