nav sider refactor

--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -4,8 +4,7 @@
       nzCollapsible [(nzCollapsed)]="ui.siderCollapsed"
       nzBreakpoint="xxl"
       [nzTrigger]="null">
-      <app-nav-sidebar-antd [collapsed]="ui.siderCollapsed()"
-        [theme]="ui.siderTheme()">
+      <app-nav-sidebar-antd>
       </app-nav-sidebar-antd>
     </nz-sider>
   }
