--- a/projects/web/src/app/account/token-detail/token-detail.component.html
+++ b/projects/web/src/app/account/token-detail/token-detail.component.html
@@ -2,13 +2,13 @@
   [nzTitle]="title" [nzExtra]="toolsTpl"
   [nzActions]="editable ? [okTpl, cancelTpl] : []">
   <ng-template #toolsTpl>
-    <nz-space-compact>
+    <nz-space-compact nzSize="small">
       <button type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon class="me-1" iconPath="bi/check" /> 保存
+        <nz-icon nzType="check" /> 保存
       </button>
       <button type="button" nz-button nzType="default" (click)="cancel()">
-        <svg-icon class="me-1" iconPath="bi/x" /> 取消
+        <nz-icon nzType="close" /> 取消
       </button>
     </nz-space-compact>
   </ng-template>
@@ -37,7 +37,7 @@
         <ng-template #refreshValueTpl>
           <button class="px-2" type="button" nzSearch nz-button nzType="default"
             nz-tooltip="刷新凭证值" (click)="newTokenValue()">
-            <svg-icon iconPath="bi/arrow-repeat" />
+            <nz-icon nzType="sync" />
           </button>
         </ng-template>
       </nz-input-group>
@@ -116,13 +116,13 @@
     @if (editable) {
       <button class="float-start ms-4" type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <nz-icon class="me-1" nzType="bi:check" /> 保存
+        <nz-icon class="me-1" nzType="check" /> 保存
       </button>
     }
   </ng-template>
   <ng-template #cancelTpl>
     <button class="float-end me-4" type="button" nz-button nzType="default" (click)="cancel()">
-      <nz-icon class="me-1" nzType="bi:x" /> 取消
+      <nz-icon class="me-1" nzType="close" /> 取消
     </button>
   </ng-template>
 </nz-card>
